--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="item">
-                <h3 class="team">GUEST</h3>
+                <h3 class="team">Away</h3>
                 <h2 class="score" id="score-guest">0</h2>
                 <div class="panel-btn">
                     <button class="btn" onclick="addGoalG()">G +1</button>
